# kimibot

./: .gitignore  CALIBRATION_DIAGNOSIS.md  DIAGNOSIS.md  HYPOTHESIS.md  LIMITLESS_INGESTION_PLAN.md  README.md  infer.py  main.py  pyproject.toml  train.py
.streamlit/: config.toml
backtest/: engine.py  validation.py
config/: default.yaml
decision/: engine.py
docs/: resolved_markets_schema.md
evaluation/: __init__.py  metrics.py  report_generator.py  walk_forward_evaluator.py
execution/: simulator.py
features/: builder.py  store.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MarketDetail.tsx  QuickTradePanel.tsx  Skeleton.tsx
frontend/lib/: hooks.ts  (+3 more)
ingestion/: __init__.py  audit.py  binance_historical.py  crypto_client.py  data_store.py  filters.py  limitless.py  limitless_client.py  limitless_historical.py  recorder.py  replay.py  resolution_scanner.py  subgraph_client.py
metrics/: __init__.py  report.py
models/: __init__.py  calibration.py  predictor.py  simple_ml.py  trainer.py
portfolio/: __init__.py  book.py
project/: __init__.py  configuration.py  types.py
tests/: test_audit.py  test_backtest.py  test_datastore.py  test_decision.py  test_eval_metrics.py  test_execution.py  test_features.py  test_ingestion.py  test_lookahead.py  test_models.py  test_portfolio.py  test_resolution_scanner.py  test_walk_forward_historical.py  test_walkforward.py
utils/: logging.py  time.py  time_utils.py  validation.py
web/: app.py  utils.py
(+29 files in other folders)
