[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "limitless-trader"
version = "0.1.0"
description = "Single-node prediction market trading system for Limitless Exchange"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "pyarrow>=14.0",
  "websockets>=12.0",
  "streamlit>=1.32",
  "plotly>=5.20",
  "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["project", "features", "ingestion", "decision", "execution", "portfolio", "backtest", "metrics", "models", "utils"]
